Fix pre overflow

--- a/public/viewer.css
+++ b/public/viewer.css
@@ -6,6 +6,7 @@
 .document pre.code, .document pre.literal-block {
   border: 1px solid #888;
   padding: 20px;
+  overflow-x: scroll;
 }
 
 .document a.reference {
